교육 파트 업데이트

--- a/index.html
+++ b/index.html
@@ -102,6 +102,81 @@
             </section><!--//section-->
 
             <section class="section experiences-section">
+                <h2 class="section-title"><i class="fa fa-graduation-cap"></i>Education</h2>
+
+                <div class="item">
+                    <div class="meta">
+                        <div class="upper-row">
+                            <h3 class="job-title">Best of the Best 4th</h3>
+                            <div class="time">2015 - 2016</div>
+                        </div><!--//upper-row-->
+                        <div class="company">취약점 분석 트랙</div>
+                    </div><!--//meta-->
+                    <div class="details">
+                        <p>KISA 주도 아래의 화이트 해커 양성 프로그램(혹은 정보보호인력 양성 프로그램)인 Best of the Best에서 4기 활동을 하였습니다. 취약점 분석 트랙에서 리버스 엔지니어링, 포너블, 네트워크 침투 기법, 웸 해킹, 임베디드 장비 분석, 포렌식 등등을 배웠으며, 아쉽게도 최종 30인까지는 가지 못하였습니다.</p>
+                    </div><!--//details-->
+                </div><!--//item-->
+
+                <div class="item">
+                    <div class="meta">
+                        <div class="upper-row">
+                            <h3 class="job-title">ICEWALL</h3>
+                            <div class="time">2014 - Present</div>
+                        </div><!--//upper-row-->
+                        <div class="company">정회원 / 부회장</div>
+                    </div><!--//meta-->
+                    <div class="details">
+                        <p>정보보안화 해킹에 관심이 많아서 1학년 때부터 동아리 활동을 하였습니다. 주로 관심 있는 분야는, 리버스 엔지니어링과 포렌식이며, 현재는 임베디드 장비의 펌웨어 덤프 및 분석에 대해 주로 공부를 하고 있습니다. 또한 동아리 내 스터디를 통해 곁가지 지식으로 포너블, 웹 해킹 등등 기본적인 정보보안 업무를 할 수 있는 수준의 실력 및 지식을 쌓을 수 있었습니다. 현재는 리버스 엔지니어링/포너블 스터디와 임베디드 장비 제작 스터디를 맡아서 진행하고 있습니다.</p>
+
+                    </div><!--//details-->
+                </div><!--//item-->
+
+                <div class="item">
+                    <div class="meta">
+                        <div class="upper-row">
+                            <h3 class="job-title">Hanyang University</h3>
+                            <div class="time">2014 - Present</div>
+                        </div><!--//upper-row-->
+                        <div class="company">BSc in Computer Science and Engineering</div>
+                    </div><!--//meta-->
+                </div><!--//item-->
+
+                <div class="item">
+                    <div class="meta">
+                        <div class="upper-row">
+                            <h3 class="job-title">Ajou University</h3>
+                            <div class="time">2012 - 2013</div>
+                        </div><!--//upper-row-->
+                        <div class="company">BSc in Computer Engineering</div>
+                    </div><!--//meta-->
+                </div><!--//item-->
+
+                <div class="item">
+                    <div class="meta">
+                        <div class="upper-row">
+                            <h3 class="job-title">KAIST IT영재원</h3>
+                            <div class="time">2010</div>
+                        </div><!--//upper-row-->
+                        <div class="company">봄 학기 수료자</div>
+                    </div><!--//meta-->
+                    <div class="details">
+                        <p>기본적인 C, C++을 이용한 자료구조 및 알고리즘 프로그래밍을 배웠습니다. 트리, 덱, 큐 등등의 기본적인 자료구조형 뿐만이 아닌 레드-블랙 트리 등 심도 있는 내용들을 배웠으며, 고등학교 그 당시 저보다 프로그래밍을 잘하는 친구들을 만나고 이야기할 수 있는 기회가 되었습니다.</p>
+
+                    </div><!--//details-->
+                </div><!--//item-->
+
+                <div class="item">
+                    <div class="meta">
+                        <div class="upper-row">
+                            <h3 class="job-title">Seoul High School</h3>
+                            <div class="time">2009 - 2012</div>
+                        </div><!--//upper-row-->
+                        <div class="company">Just normal(?) Student</div>
+                    </div><!--//meta-->
+                </div><!--//item-->
+            </section>
+
+            <section class="section experiences-section">
                 <h2 class="section-title"><i class="fa fa-object-group"></i>Projects / Publications</h2>
 
                 
