마음에 안 들지만 일단 이 정도에서 끝내자

--- a/index.html
+++ b/index.html
@@ -107,6 +107,20 @@
                 <div class="item">
                     <div class="meta">
                         <div class="upper-row">
+                            <h3 class="job-title">OOPArts</h3>
+                            <div class="time">2016 - Present</div>
+                        </div><!--//upper-row-->
+                        <div class="company">정회원</div>
+                    </div><!--//meta-->
+                    <div class="details">
+                        <p>게임 개발 동아리 OOPArts에서 유니티로 게임 개발을 하고 있습니다. 스팀 게임 및 콘솔 게임 관련한 발표나 프로그래밍 관련 발표를 하기도 하였습니다.</p>
+
+                    </div><!--//details-->
+                </div><!--//item-->
+
+                <div class="item">
+                    <div class="meta">
+                        <div class="upper-row">
                             <h3 class="job-title">Best of the Best 4th</h3>
                             <div class="time">2015 - 2016</div>
                         </div><!--//upper-row-->
@@ -123,7 +137,7 @@
                             <h3 class="job-title">ICEWALL</h3>
                             <div class="time">2014 - Present</div>
                         </div><!--//upper-row-->
-                        <div class="company">정회원 / 부회장</div>
+                        <div class="company">정회원 / 부회장 (2016)</div>
                     </div><!--//meta-->
                     <div class="details">
                         <p>정보보안화 해킹에 관심이 많아서 1학년 때부터 동아리 활동을 하였습니다. 주로 관심 있는 분야는, 리버스 엔지니어링과 포렌식이며, 현재는 임베디드 장비의 펌웨어 덤프 및 분석에 대해 주로 공부를 하고 있습니다. 또한 동아리 내 스터디를 통해 곁가지 지식으로 포너블, 웹 해킹 등등 기본적인 정보보안 업무를 할 수 있는 수준의 실력 및 지식을 쌓을 수 있었습니다. 현재는 리버스 엔지니어링/포너블 스터디와 임베디드 장비 제작 스터디를 맡아서 진행하고 있습니다.</p>
@@ -191,8 +205,8 @@
                     <div class="details">
                         <p>
                             컴퓨터 공학의 전반적인 부분을 적어보자라는 생각으로 만든 위키입니다. 아직도... 내용 추가가 되고 있습니다! 도움 많이 주세요!<br>
-                            <i class="fa fa-link" aria-hidden="true"></i><a href="https://cs.univ.wiki/">Wiki Link</a>
-                            <i class="fa fa-github" aria-hidden="true"></i><a href="https://github.com/benjioh5/CS-Univ-Wiki">Github Link</a>
+                            <i class="fa fa-link" aria-hidden="true"></i><a href="https://cs.univ.wiki/"> Wiki Link  </a>
+                            <i class="fa fa-github" aria-hidden="true"></i><a href="https://github.com/benjioh5/CS-Univ-Wiki"> Github Link </a>
                         </p>
                     </div><!--//details-->
                 </div><!--//item-->
