--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                         <div class="company">KISA, Best of the Best 6th</div>
                     </div><!--//meta-->
                     <div class="details">
-                        <p>KISA의 Best of the Best 6기 프로젝트인 Emohtrams는 스마트 홈 네트워크 IoT 장비들의 취약점 발견 및 다면지단 프로그램을 만드는 것을 목표로 하였습니다. 저는 팀 내에서 Project Leader라는 직함으로 멘토링을 진행하였습니다. 결과적으로, Emothrams팀은 타겟의 권한 탈취 후 연결되어 있는 IoT 장비들의 접근 제어가 가능한 취약점 등을 발견하였습니다. 이를 다수의 언론사에 제보를 하였습니다.
+                        <p>KISA의 Best of the Best 6기 프로젝트인 Emohtrams는 스마트 홈 네트워크 IoT 장비들의 취약점 발견 및 다면지단 프로그램을 만드는 것을 목표로 하였습니다. 저는 팀 내에서 Project Leader라는 직함으로 멘토링을 진행하였습니다. 결과적으로, Emothrams팀은 타겟의 권한 탈취 후 연결되어 있는 IoT 장비들의 접근 제어가 가능한 취약점 등을 발견하였습니다. 이를 다수의 언론사에 제보를 하였습니다.<br>
                         <i class="fa fa-link" aria-hidden="true"></i><a href="http://www.dailysecu.com/?mod=news&act=articleView&idxno=26932">[긴급] 아파트 스마트홈에 심각한 취약점 발견…수십만 입주민 위험에 노출 원격에서 차량개폐기, 로비도어, 현관 도어락 스마트홈 모든 기능 제어 가능해</a><br>
                         <i class="fa fa-link" aria-hidden="true"></i><a href="http://news.jtbc.joins.com/html/517/NB11562517.html">똑똑한 줄 알았는데…맥없이 뚫린 '스마트 홈' 보안</a><br>
                         </p>
