update profile - 2020 ver - add ethereum conferences - remove old phone number - fix link of publications - ...

--- a/index.html
+++ b/index.html
@@ -214,20 +214,26 @@ h4 span:first-child {
 		</aside>
 		<div class="col-sm-9">
 			<div class="row">
-			<div class="col-sm-6">
-				<strong>Email</strong>
-				<div class="email">benjioh5@gmail.com</div>
-			</div>
-			<div class="col-sm-6">
-				<strong>Phone</strong>
-				<div class="phone">(82) 10-9980-9597</div>
-			</div>
-			<div class="col-sm-6">
-				<strong>Website</strong>
-				<div class="website">
-					<a href="http://www.benjioh5.com">http://www.benjioh5.com</a>
+				<div class="col-sm-6">
+					<strong>Email</strong>
+					<div class="email">benjioh5 {at} gmail.com</div>
 				</div>
-			</div>
+				<div class="col-sm-6">
+					<strong>Telegram</strong>
+					<div class="email">@benjioh5</div>
+				</div>
+				<div class="col-sm-6">
+					<strong>Website</strong>
+					<div class="website">
+						<a href="http://www.benjioh5.com">http://www.benjioh5.com</a>
+					</div>
+				</div>
+				<div class="col-sm-6">
+					<strong>Blog</strong>
+					<div class="website">
+						<a href="http://blog.benjioh5.com">http://blog.benjioh5.com</a>
+					</div>
+				</div>
 			</div>
 		</div>
 	</section>
@@ -236,7 +242,7 @@ h4 span:first-child {
 			<h3>About</h3>
 		</aside>
 		<div class="col-sm-9">
-			<p>함수형 언어, 언어철학, 형식(수리)논리학에 관심이 많은 학생입니다. 현재 경영학과를 부전공하고 있으며, 이런저런 통계기법이나 데이터 마이닝 기법들, 금융공학에 대해 공부하고 있습니다. 어렸을 적부터 정보보안이나 해킹 쪽을 취미로 해왔으며, 이런 습관 덕분에 정말 다이나믹한 인생을 살아오고 있는게 아닌가 싶습니다. 이것저것 관심은 많은데 시간이 부족하여 이런저런 것들을 판을 벌려놓고 수습을 잘 못하는 경향이 있는데, 현재 하나씩 해결해나가는 중입니다. :P</p>
+			<p>블록체인 관련 일을 하고 있습니다. 이더리움 관련 개발을 주로 하며, 보안 관련 적성 및 개발 경험을 살려 커리어 플랜을 짜고 있습니다.</p>
 		</div>
 	</section>
 	<section id="profiles" class="row">
@@ -272,6 +278,16 @@ h4 span:first-child {
 					<div class="username">
 						<div class="url">
 							<a href="https://www.linkedin.com/in/benjioh5">benjioh5</a>
+						</div>
+					</div>
+				</div>
+				<div class="col-sm-6">
+					<strong class="network">
+						로켓펀치
+					</strong>
+					<div class="username">
+						<div class="url">
+							<a href="https://www.rocketpunch.com/@benjioh5">benjioh5</a>
 						</div>
 					</div>
 				</div>
@@ -320,8 +336,9 @@ h4 span:first-child {
 				</div>
 				<h4>Highlights</h4>
 				<ul class="highlights">
-					<li class="bullet">[긴급] 아파트 스마트홈에 심각한 취약점 발견…수십만 입주민 위험에 노출 원격에서 차량개폐기, 로비도어, 현관 도어락 스마트홈 모든 기능 제어 가능해 http://www.dailysecu.com/?mod=news&amp;act=articleView&amp;idxno=26932</li>
-					<li class="bullet">똑똑한 줄 알았는데…맥없이 뚫린 &#x27;스마트 홈&#x27; 보안 http://news.jtbc.joins.com/article/article.aspx?news_id=NB11562517</li>
+					<li class="bullet"><a href="http://codegate.org/assets/kr/files/Smart%20Home%20Hacking%20in%20Real%20World.pdf">Smart Home Hacking in Real World (Codegate 2017)</a></li>
+					<li class="bullet"><a href="http://www.dailysecu.com/?mod=news&amp;act=articleView&amp;idxno=26932">[긴급] 아파트 스마트홈에 심각한 취약점 발견…수십만 입주민 위험에 노출 원격에서 차량개폐기, 로비도어, 현관 도어락 스마트홈 모든 기능 제어 가능해</a></li>
+					<li class="bullet"><a href="http://news.jtbc.joins.com/article/article.aspx?news_id=NB11562517">똑똑한 줄 알았는데…맥없이 뚫린 &#x27;스마트 홈&#x27; 보안</a></li>
 				</ul>
 			</div>
 			<div class="col-sm-12">
@@ -550,24 +567,61 @@ h4 span:first-child {
 		</aside>
 		<div class="col-sm-9">
 			<div class="row">
-			<div class="col-sm-12">
-				<h4 class="strike-through">
-					<span>CS Univ Wiki</span>
-					<span class="date">
-						2016
-					</span>
-				</h4>
-				<div class="website pull-right">
-					<a href="https://cs.univ.wiki"></a>
+				<div class="col-sm-12">
+					<h4 class="strike-through">
+						<span>DeFi 스마트 컨트랙트의 취약점 분석 및 적용, 그리고 개선 방법</span>
+						<span class="date">
+							2020
+						</span>
+					</h4>
+					<div class="website pull-right">
+						<a href="https://ethcon.kr/"></a>
+					</div>
+					<div class="publisher">
+						<em>Published at</em>
+						<strong>Ethcon 2020</strong>
+					</div>
+					<div class="summary">
+						<p><a href="https://www.youtube.com/watch?v=UgUELXvcAOM">(발표영상)</a></p>
+						<p><a href="https://www.slideshare.net/benjaminhkoh/ethcon-2020-defi-240330684">(발표자료)</a></p>
+					</div>
 				</div>
-				<div class="publisher">
-					<em>Published by</em>
-					<strong>benjioh5</strong>
+				<div class="col-sm-12">
+					<h4 class="strike-through">
+						<span>웹 환경에서 블록체인 노드와 통신 및 신원인증 (DID)</span>
+						<span class="date">
+							2020
+						</span>
+					</h4>
+					<div class="website pull-right">
+						<a href="https://www.openbooth.space/exhibition/html5"></a>
+					</div>
+					<div class="publisher">
+						<em>Published at</em>
+						<strong>W3C HTML5 Conference 2020</strong>
+					</div>
+					<div class="summary">
+						<p><a href="https://www.slideshare.net/benjaminhkoh/w3c-html5-2020-did-240330755">(발표자료)</a></p>
+					</div>
 				</div>
-				<div class="summary">
-					<p>컴퓨터 공학의 전반적인 부분을 적어보자라는 생각으로 만든 위키</p>
+				<div class="col-sm-12">
+					<h4 class="strike-through">
+						<span>Ethereum 2.0 and Deposit Contract</span>
+						<span class="date">
+							2019
+						</span>
+					</h4>
+					<div class="website pull-right">
+						<a href="https://www.meetup.com/ko-KR/Seoul-Ethereum-Meetup/"></a>
+					</div>
+					<div class="publisher">
+						<em>Published at</em>
+						<strong>29회 이더리움 밋업</strong>
+					</div>
+					<div class="summary">
+						<p><a href="https://www.slideshare.net/benjaminhkoh/incognito-2016-iot">(발표자료)</a></p>
+					</div>
 				</div>
-			</div>
 			<div class="col-sm-12">
 				<h4 class="strike-through">
 					<span>All your base is belong to us - IoT 펌웨어 추출과 변조</span>
@@ -579,11 +633,11 @@ h4 span:first-child {
 					<a href="https://inc0gnito.com/"></a>
 				</div>
 				<div class="publisher">
-					<em>Published by</em>
+					<em>Published at</em>
 					<strong>Inc0gnito 2016</strong>
 				</div>
 				<div class="summary">
-					<p>https://www.slideshare.net/benjaminhkoh/incognito-2016-iot</p>
+					<p><a href=https://www.slideshare.net/benjaminhkoh/incognito-2016-iot>(발표자료)</a></p>
 				</div>
 			</div>
 			<div class="col-sm-12">
@@ -597,11 +651,11 @@ h4 span:first-child {
 					<a href="https://inc0gnito.com/"></a>
 				</div>
 				<div class="publisher">
-					<em>Published by</em>
+					<em>Published at</em>
 					<strong>Inc0gnito 2015</strong>
 				</div>
 				<div class="summary">
-					<p>https://www.slideshare.net/benjaminhkoh/incognito-2015</p>
+					<p><a href=https://www.slideshare.net/benjaminhkoh/incognito-2015>(발표자료)</a></p>
 				</div>
 			</div>
 			<div class="col-sm-12">
@@ -612,14 +666,14 @@ h4 span:first-child {
 					</span>
 				</h4>
 				<div class="website pull-right">
-					<a href="http://www.eiric.or.kr/community/post2.php?m=view&amp;gubun=201501&amp;num=455&amp;pg=17&amp;seGubun=&amp;seGubun1=&amp;SnxGubun=%C6%F7%BD%BA%C5%CD&amp;searchBy=&amp;searchWord="></a>
+					<a href="http://www.eiric.or.kr/"></a>
 				</div>
 				<div class="publisher">
-					<em>Published by</em>
+					<em>Published at</em>
 					<strong>한국통신학회</strong>
 				</div>
 				<div class="summary">
-					<p></p>
+					<p><a href="http://www.eiric.or.kr/community/post2.php?m=view&amp;gubun=201501&amp;num=455&amp;pg=17&amp;seGubun=&amp;seGubun1=&amp;SnxGubun=%C6%F7%BD%BA%C5%CD&amp;searchBy=&amp;searchWord=">(소논문)</a></p>
 				</div>
 			</div>
 			</div>
@@ -634,12 +688,27 @@ h4 span:first-child {
 			<div class="row">
 			<div class="col-sm-6">
 				<div class="name">
+					<h4>Programming languages</h4>
+				</div>
+				<ul class="keywords">
+					<li>C++</li>
+					<li>C#</li>
+					<li>Erlang</li>
+					<li>Elixir</li>
+					<li>Java</li>
+					<li>Python</li>
+					<li>Rust</li>
+					<li>Go</li>
+					<li>...</li>
+				</ul>
+			</div>
+			<div class="col-sm-6">
+				<div class="name">
 					<h4>Frontend Dev</h4>
 				</div>
 				<ul class="keywords">
-					<li>HTML5</li>
-					<li>CSS3</li>
-					<li>javascript</li>
+					<li>Vuejs</li>
+					<li>jQuery</li>
 				</ul>
 			</div>
 			<div class="col-sm-6">
@@ -648,12 +717,11 @@ h4 span:first-child {
 				</div>
 				<ul class="keywords">
 					<li>Flask</li>
-					<li>Django</li>
 					<li>node.js</li>
 					<li>PHP</li>
-					<li>ASP.NET</li>
+					<li>Spring</li>
 					<li>MongoDB</li>
-					<li>MYSQL</li>
+					<li>MYSQL & MariaDB</li>
 				</ul>
 			</div>
 			<div class="col-sm-6">
@@ -664,41 +732,17 @@ h4 span:first-child {
 					<li>nginx</li>
 					<li>bash script</li>
 					<li>Perl</li>
+					<li>Terraform</li>
 				</ul>
 			</div>
 			<div class="col-sm-6">
 				<div class="name">
-					<h4>Programming languages</h4>
-				</div>
-				<ul class="keywords">
-					<li>Erlang</li>
-					<li>Haskell</li>
-					<li>Elixir</li>
-					<li>C++</li>
-					<li>C#</li>
-					<li>Python</li>
-					<li>R</li>
-					<li>...</li>
-				</ul>
-			</div>
-			<div class="col-sm-6">
-				<div class="name">
-					<h4>iOS Dev</h4>
+					<h4>Mobile Dev</h4>
 				</div>
 				<ul class="keywords">
 					<li>Swift</li>
-					<li>cocoapod</li>
-					<li>Xcode</li>
-				</ul>
-			</div>
-			<div class="col-sm-6">
-				<div class="name">
-					<h4>Android Dev</h4>
-				</div>
-				<ul class="keywords">
 					<li>Java</li>
-					<li>Kotlin</li>
-					<li>Maven</li>
+					<li>Flutter</li>
 				</ul>
 			</div>
 			<div class="col-sm-6">
@@ -710,6 +754,28 @@ h4 span:first-child {
 					<li>XD</li>
 					<li>Photoshop</li>
 					<li>Zeplin</li>
+					<li>After Effect</li>
+				</ul>
+			</div>
+			<div class="col-sm-6">
+				<div class="name">
+					<h4>Embedded</h4>
+				</div>
+				<ul class="keywords">
+					<li>HDL</li>
+					<li>Firmware Development via C/C++</li>
+				</ul>
+			</div>
+			<div class="col-sm-6">
+				<div class="name">
+					<h4>Security</h4>
+				</div>
+				<ul class="keywords">
+					<li>Pwn (System)</li>
+					<li>Reverse Engineering</li>
+					<li>Webhacking (XSS, SQLi, ...)</li>
+					<li>Forensic (FTK Imager/EnCase)</li>
+					<li>...</li>
 				</ul>
 			</div>
 			<div class="col-sm-6">
@@ -722,45 +788,6 @@ h4 span:first-child {
 					<li>armASM</li>
 					<li>lldb/gdb</li>
 					<li>Pin Tool</li>
-					<li>decompression</li>
-				</ul>
-			</div>
-			<div class="col-sm-6">
-				<div class="name">
-					<h4>Web Hacking</h4>
-				</div>
-				<ul class="keywords">
-					<li>OWASP ZAP</li>
-					<li>SQLi</li>
-					<li>Fuzzing</li>
-					<li>Cookie jack</li>
-					<li>XSS</li>
-					<li>...</li>
-				</ul>
-			</div>
-			<div class="col-sm-6">
-				<div class="name">
-					<h4>Embedded</h4>
-				</div>
-				<ul class="keywords">
-					<li>HDL</li>
-					<li>Electronics</li>
-					<li>Firmware dump</li>
-					<li>CAD</li>
-					<li>Prototyping</li>
-					<li>RF Sniffing</li>
-				</ul>
-			</div>
-			<div class="col-sm-6">
-				<div class="name">
-					<h4>Forensic</h4>
-				</div>
-				<ul class="keywords">
-					<li>EnCase</li>
-					<li>FTK Imager</li>
-					<li>HxD</li>
-					<li>Registry Forensic</li>
-					<li>Artifect</li>
 				</ul>
 			</div>
 			</div>
@@ -786,7 +813,7 @@ h4 span:first-child {
 					<strong>English</strong>
 				</div>
 				<div class="fluency">
-					Soso..?
+					SoSo
 				</div>
 			</div>
 			<div class="col-sm-6">
@@ -800,32 +827,6 @@ h4 span:first-child {
 			</div>
 		</div>
 	</section>
-
-	<section id="interests" class="row">
-		<aside class="col-sm-3">
-			<h3>Interests</h3>
-		</aside>
-		<div class="col-sm-9">
-			<div class="row">
-			<div class="col-sm-6">
-				<div class="name">
-					<h4>Lego</h4>
-				</div>
-			</div>
-			<div class="col-sm-6">
-				<div class="name">
-					<h4>Game</h4>
-				</div>
-				<ul class="keywords">
-					<li>Steam</li>
-					<li>Old school</li>
-				</ul>
-			</div>
-			</div>
-		</div>
-	</section>
-	
-
 	</div>
 	
 	</body>
