--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@ h4 span:first-child {
 				<ul class="highlights">
 					<li class="bullet"><a href="http://www.newsbrite.net/news/articleView.html?idxno=128705">DVP 블록체인 해킹 대회, 버그 바운티 플랫폼의 매력 알려</a></li>
 					<li class="bullet"><a href="https://www.edaily.co.kr/news/read?newsId=02437046622616840&mediaCodeNo=257&OutLnkChk=Y">블록체인 콘텐츠 유통 '팝체인', SCV SOFT와 파트너십</a></li>
-					<li class="bullet"><a href="http://www.dailysportshankook.co.kr/news/articleView.html?idxno=216644"></a>‘블록크래프터스 데모데이 with 롱해시’ 개최</li>
+					<li class="bullet"><a href="http://www.dailysportshankook.co.kr/news/articleView.html?idxno=216644">‘블록크래프터스 데모데이 with 롱해시’ 개최</a></li>
 					<li class="bullet"><a href="http://www.fintechpost.co.kr/news/articleView.html?idxno=2174#0AXD">블록패치, '렛츠밋업 인 서울' 성료...현직 크립토 펀드의 ‘프로젝트 투자 시 분석 요소' 패널 토론도 진행해</a></li>
 				</ul>
 			</div>
