--- a/index.html
+++ b/index.html
@@ -317,6 +317,7 @@ h4 span:first-child {
 				<div class="summary">
 					<p>개발 및 일정 관리를 모두 하고 있습니다.</p>
 				</div>
+				<h4>Highlights</h4>
 				<ul class="highlights">
 					<li class="bullet"><a href="http://www.newsbrite.net/news/articleView.html?idxno=128705">DVP 블록체인 해킹 대회, 버그 바운티 플랫폼의 매력 알려</a></li>
 					<li class="bullet"><a href="https://www.edaily.co.kr/news/read?newsId=02437046622616840&mediaCodeNo=257&OutLnkChk=Y">블록체인 콘텐츠 유통 '팝체인', SCV SOFT와 파트너십</a></li>
