add some bounty and translation history

--- a/index.html
+++ b/index.html
@@ -645,6 +645,21 @@ h4 span:first-child {
 						<p><a href="https://www.slideshare.net/benjaminhkoh/incognito-2016-iot">(발표자료)</a></p>
 					</div>
 				</div>
+				<div class="col-sm-12">
+					<h4 class="strike-through">
+						<span>W3C DID Core v1.0 문서 번역</span>
+						<span class="date">
+							2019
+						</span>
+					</h4>
+					<div class="website pull-right">
+						<a href="https://ssimeetupkorea.github.io/did-core/"></a>
+					</div>
+					<div class="publisher">
+						<em>Published at</em>
+						<strong>W3C DID</strong>
+					</div>
+				</div>
 			<div class="col-sm-12">
 				<h4 class="strike-through">
 					<span>All your base is belong to us - IoT 펌웨어 추출과 변조</span>
@@ -699,6 +714,32 @@ h4 span:first-child {
 					<p><a href="http://www.eiric.or.kr/community/post2.php?m=view&amp;gubun=201501&amp;num=455&amp;pg=17&amp;seGubun=&amp;seGubun1=&amp;SnxGubun=%C6%F7%BD%BA%C5%CD&amp;searchBy=&amp;searchWord=">(소논문)</a></p>
 				</div>
 			</div>
+			</div>
+		</div>
+	</section>
+
+	<section id="publications" class="row">
+		<aside class="col-sm-3">
+			<h3>Bounty</h3>
+		</aside>
+		<div class="col-sm-9">
+			<div class="row">
+				<div class="col-sm-12">
+					<h4 class="strike-through">
+						<span>Core Vault Finance Bounty</span>
+						<span class="date">
+							2020
+						</span>
+					</h4>
+					<div class="website pull-right">
+						<a href="https://medium.com/core-vault/cores-bug-bounty-reward-announcement-4b9af30827e7"></a>
+					</div>
+					<ul class="highlights">
+						<li class="bullet">Reported a math error inside the LGE ending function. This would result in the LGE not being able to end until it is fixed.</li>
+						<li class="bullet">Reported a second math error inside the LGE ending function. This would result in the LGE not being able to end until it is fixed.</li>
+						<li class="bullet">Reported possible attack on running average after LGE & adding liquidity at a too high/low of a price.</li>
+					</ul>
+				</div>
 			</div>
 		</div>
 	</section>
