add hackerton info

--- a/index.html
+++ b/index.html
@@ -502,6 +502,27 @@ h4 span:first-child {
 			<div class="row">
 			<div class="col-sm-12">
 				<h4 class="strike-through">
+					<span>한화생명 드림플러스 블록체인 해커톤 - 최우수상 (멘토링)</span>
+				</h4>
+				<div class="date pull-right">
+					<em>Awarded</em>
+					2021-12-23
+				</div>
+				<div class="awarder">
+					<em>by</em>
+					<strong>한화생명 드림플러스</strong>
+				</div>
+				<div class="summary">
+					Play.Finance 팀 멘토링
+				</div>
+				<ul class="highlights">
+					<li class="bullet"><a href="http://www.coindeskkorea.com/news/articleView.html?idxno=76712">
+						한화생명 드림플러스, 블록체인 인재 육성 나선다 - 드림플러스 블록체인 해커톤 우승팀 '플레이 파이낸스'
+					</a></li>
+				</ul>
+			</div>
+			<div class="col-sm-12">
+				<h4 class="strike-through">
 					<span>MEDICOLOR HACKATHON 2017 - 특별상</span>
 				</h4>
 				<div class="date pull-right">
