update hackathon info

--- a/index.html
+++ b/index.html
@@ -581,9 +581,6 @@ h4 span:first-child {
 					<em>by</em>
 					<strong>UTC</strong>
 				</div>
-				<div class="summary">
-					소변의 pH 값과 색상을 이용하여 사용자의 건강을 체크하고 스마트폰에서 결과를 확인할 수 있는 스마트 헬스케어 제품 Helpee(Help + pee)를 제작
-				</div>
 			</div>
 			<div class="col-sm-12">
 				<h4 class="strike-through">
@@ -600,6 +597,14 @@ h4 span:first-child {
 				<div class="summary">
 					소변의 pH 값과 색상을 이용하여 사용자의 건강을 체크하고 스마트폰에서 결과를 확인할 수 있는 스마트 헬스케어 제품 Helpee(Help + pee)를 제작
 				</div>
+				<ul class="highlights">
+					<li class="bullet"><a href="https://www.hankyung.com/news/article/2015020480241">
+						질병 알려주는 소변기·잠에서 깬 아이 재우는 요람…벤처 뺨치는 대학생들 'IoT 아이디어 전쟁'
+					</a></li>
+					<li class="bullet"><a href="http://news.heraldcorp.com/view.php?ud=20150209000278">
+						대학기업가 센터 ‘슈퍼 챌린지 해커톤대회’ 성황리에 폐막
+					</a></li>
+				</ul>
 			</div>
 			</div>
 		</div>
