update icewall url

--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@ h4 span:first-child {
 					</span>
 				</h4>
 				<div class="website pull-right">
-					<a href="http://icewall.hanyang.ac.kr">http://icewall.hanyang.ac.kr</a>
+					<a href="http://icewall.org/">http://icewall.org/</a>
 				</div>
 				<div class="position">
 					Pen tester
