update ethcon youtube url

--- a/index.html
+++ b/index.html
@@ -631,7 +631,9 @@ h4 span:first-child {
 						<strong>Ethcon 2020</strong>
 					</div>
 					<div class="summary">
-						<p><a href="https://www.youtube.com/watch?v=UgUELXvcAOM">(발표영상)</a></p>
+						
+						<p><a href="https://youtu.be/vrtbEujjyQE?t=8570">(발표영상)</a></p>
+						<!-- <p><a href="https://www.youtube.com/watch?v=UgUELXvcAOM">(발표영상)</a></p> -->
 						<p><a href="https://www.slideshare.net/benjaminhkoh/ethcon-2020-defi-240330684">(발표자료)</a></p>
 					</div>
 				</div>
