add new hackathon

--- a/index.html
+++ b/index.html
@@ -502,6 +502,30 @@ h4 span:first-child {
 			<div class="row">
 			<div class="col-sm-12">
 				<h4 class="strike-through">
+					<span>한화생명 드림플러스 블록체인 해커톤 - 해시드상 (멘토링)</span>
+				</h4>
+				<div class="date pull-right">
+					<em>Awarded</em>
+					2022-11-28
+				</div>
+				<div class="awarder">
+					<em>by</em>
+					<strong>한화생명 드림플러스</strong>
+				</div>
+				<div class="summary">
+					Ellixi 팀 멘토링
+				</div>
+				<ul class="highlights">
+					<li class="bullet"><a href="https://platum.kr/archives/197722">
+						블록체인 업계 멘토와 함께하는 2박 3일 해커톤 열려
+					</a></li>
+					<li class="bullet"><a href="http://www.coindeskkorea.com/news/articleView.html?idxno=82312">
+						“게임에서 지갑까지 참신한 발상”…드림플러스 해커톤 ‘불꽃’
+					</a></li>
+				</ul>
+			</div>
+			<div class="col-sm-12">
+				<h4 class="strike-through">
 					<span>한화생명 드림플러스 블록체인 해커톤 - 최우수상 (멘토링)</span>
 				</h4>
 				<div class="date pull-right">
