update undefined labs hacker house

--- a/index.html
+++ b/index.html
@@ -319,6 +319,7 @@ h4 span:first-child {
 				</div>
 				<h4>Highlights</h4>
 				<ul class="highlights">
+					<li class="bullet"><a href="https://www.digitalasset.works/news/articleView.html?idxno=2733" target="_blank">'SCV소프트' '필업' '포그닝' '지송' 언디파인드 해커하우스 '수상'</a></li>
 					<li class="bullet"><a href="http://www.newsbrite.net/news/articleView.html?idxno=128705" target="_blank">DVP 블록체인 해킹 대회, 버그 바운티 플랫폼의 매력 알려</a></li>
 					<li class="bullet"><a href="https://www.edaily.co.kr/news/read?newsId=02437046622616840&mediaCodeNo=257&OutLnkChk=Y" target="_blank">블록체인 콘텐츠 유통 '팝체인', SCV SOFT와 파트너십</a></li>
 					<li class="bullet"><a href="http://www.dailysportshankook.co.kr/news/articleView.html?idxno=216644" target="_blank">‘블록크래프터스 데모데이 with 롱해시’ 개최</a></li>
@@ -500,6 +501,27 @@ h4 span:first-child {
 		</aside>
 		<div class="col-sm-9">
 			<div class="row">
+				<div class="col-sm-12">
+					<h4 class="strike-through">
+						<span>Undefined Hacker House</span>
+					</h4>
+					<div class="date pull-right">
+						<em>Awarded</em>
+						2023-05-30
+					</div>
+					<div class="awarder">
+						<em>by</em>
+						<strong>Undefined Labs</strong>
+					</div>
+					<div class="summary">
+						LSD 확장용 vETH 개발
+					</div>
+					<ul class="highlights">
+						<li class="bullet"><a href="https://www.digitalasset.works/news/articleView.html?idxno=2733" target="_blank">
+							'SCV소프트' '필업' '포그닝' '지송' 언디파인드 해커하우스 '수상'
+						</a></li>
+					</ul>
+				</div>
 			<div class="col-sm-12">
 				<h4 class="strike-through">
 					<span>한화생명 드림플러스 블록체인 해커톤 - 해시드상 (멘토링)</span>
