--- a/index.html
+++ b/index.html
@@ -129,20 +129,54 @@ h4 span:first-child {
 .language-switcher {
 	text-align: right;
 	margin-top: 10px;
+	display: flex;
+	align-items: center;
+	justify-content: flex-end;
+	gap: 10px;
 }
-.language-switcher label {
+.language-switcher .language-label {
 	color: #95a5a6;
 	font-size: 12px;
 	font-weight: 700;
 	letter-spacing: 0.04em;
-	margin-bottom: 4px;
 }
-.language-switcher select {
-	border: 1px solid #e7e9ec;
-	border-radius: 4px;
-	padding: 6px 10px;
-	font-size: 14px;
+.language-switcher .language-label.active {
+	color: #000;
+}
+.language-switcher .toggle {
+	position: relative;
+	width: 44px;
+	height: 24px;
+}
+.language-switcher .toggle input {
+	opacity: 0;
+	width: 0;
+	height: 0;
+}
+.language-switcher .toggle-track {
+	position: absolute;
+	inset: 0;
+	background: #e7e9ec;
+	border-radius: 999px;
+	transition: background 0.2s ease;
+}
+.language-switcher .toggle-track:before {
+	content: "";
+	position: absolute;
+	width: 18px;
+	height: 18px;
+	left: 3px;
+	top: 3px;
 	background: #fff;
+	border-radius: 50%;
+	box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
+	transition: transform 0.2s ease;
+}
+.language-switcher .toggle input:checked + .toggle-track {
+	background: #2ecc71;
+}
+.language-switcher .toggle input:checked + .toggle-track:before {
+	transform: translateX(20px);
 }
 #content h3 {
 	color: #f1c40f;
@@ -261,11 +295,18 @@ h4 span:first-child {
 							{{ resume.basics.label }}
 						</h2>
 						<div class="language-switcher">
-							<label for="language-select">Language</label>
-							<select id="language-select" v-model="language" @change="onLanguageChange">
-								<option value="ko">한국어</option>
-								<option value="en">English</option>
-							</select>
+							<span class="language-label" :class="{ active: language === 'ko' }">한국어</span>
+							<label class="toggle" aria-label="Toggle language">
+								<input
+									type="checkbox"
+									v-model="language"
+									:true-value="'en'"
+									:false-value="'ko'"
+									@change="onLanguageChange"
+								>
+								<span class="toggle-track"></span>
+							</label>
+							<span class="language-label" :class="{ active: language === 'en' }">English</span>
 						</div>
 					</div>
 				</div>
